kpd-public.css
/* ... */
#tlInfHold .youNewDiv {
	font-size: 0;
	min-width: 100%;

	transition: color 0.3s linear;
}
#tlInfHold .youNewDiv:hover {
	color: white !important;
}
#battlepassAd[onclick='playSelect(),showAccountUpdatesPopup()'] {
	display: none !important;
}
#battlepassAd .helpTxtHol {
	margin-left: 0 !important;
}
#battlepassAd .helpTxtHol:hover {
	opacity: 1;
}
#battlepassAd #bpAdIcon,
#battlepassAd .helpTxtHol div:nth-child(2) {
	display: none;
}
#battlepassAd .helpTxtHol div:first-child {
	position: relative;

	font-size: 0 !important;

	margin-left: -8px;
}
#battlepassAd .helpTxtHol div:first-child::before {
	position: absolute;
	inset: 0;

	width: fit-content;

	content: 'BattlePass';
	font-size: 20.5px;
	white-space: nowrap;

	padding: 0 27px !important;

	transition: color 0.3s linear;
}
#tlInfHold #battlepassAd:hover .helpTxtHol div:first-child::before {
	color: white !important;
}

/* spec */
#spectButton [style='font-size:15px;color:rgba(255,255,255,0.6)'] {
	display: none;
}
.sliderSml {
	visibility: hidden;
}
#spectButton .switchsml {
	all: unset !important;
}
.sliderSml:after {
	position: absolute;
	visibility: visible;
	height: auto;
	content: 'Spectate';
	color: rgba(255, 255, 255, 0.7);
	font-size: 20px;
	background-color: rgba(0, 0, 0, 0.2);
	padding: 15px;
	border: 2px solid rgba(0, 0, 0, 0.1);
	border-radius: 5px;

	transition: color 0.3s linear;
}
.switchsml:hover .sliderSml:after {
	color: white !important;
}
.switchsml #specBtn:checked ~ .sliderSml:after {
	color: white !important;
}

input:checked + .sliderSml:after {
	visibility: visible;
	/* height: 58px; */
	content: 'Spectating';
	color: rgba(255, 255, 255, 0.7);
	background-color: rgba(0, 0, 0, 0.2);
	padding: 15px;
	border: 2px solid rgba(0, 0, 0, 0.1);
	border-radius: 5px;
}
#uiBase.onMenu #spectButton {
	top: 164px;
	left: 375px;
	visibility: hidden;
	transform: translateX(0) !important;
}
/* /CONTROL BUTTONS */

/* SIGNOUT STYLES */
#signedOutHeaderBar {
	padding-right: 10px;
	padding-left: 10px;
	filter: grayscale(1);
}
/* /SIGNOUT STYLES */

/* CHAT */
#chatList {
	background-color: transparent !important;
	border: none !important;
	-webkit-mask-image: -webkit-gradient(
		linear,
		left top,
		left top 50%,
		from(rgba(0, 0, 0, 0)),
		to(rgba(0, 0, 0, 1))
	);
}
#uiBase.onGame #chatHolder {
	bottom: 90px !important;
}
#chatHolder {
	transition: all 0.4s cubic-bezier(0.43, 0.32, 0.35, 1.32);
}
.chatItem {
	background-color: rgba(0, 0, 0, 0.2) !important;
	border-radius: 5px;
	padding: 4px 16px;
	max-width: 280px;
	color: #ffffff;
	margin-left: 0px !important;
	margin: 5px 5px 5px;
}
/* /CHAT */

/* TOP  */
.topRightCounters div {
	background-color: rgba(0, 0, 0, 0.2);
}
#mLevelCont {
	background-color: transparent;
}

/* TOP LEFT */
#signedInHeaderBar > div:nth-of-type(1),
#signedInHeaderBar > div:nth-of-type(2) {
	display: flex !important;
	align-items: center;
}
.krInfo,
#menuJNKCount {
	display: flex !important;
	align-self: center;
	align-items: center;
}
.krInfo {
	margin-top: 0 !important;
}
.junkInfo {
	margin-top: 0 !important;
}
.junkInfo:hover #menuJNKCount,
.junkInfo:hover span {
	text-decoration: none !important;
}
#NewAltManager {
	display: flex !important;
}
#NewAltManager #linkCmdBtn1,
#linkCmdBtn2 {
	display: none !important;
}
#NewAltManager div:first-of-type {
	margin-left: 0 !important;
	margin-top: 0 !important;

	display: flex !important;
	align-items: center;
}
#NewAltManager span {
	color: white !important;
}

#mLevelCont {
	margin-left: 0 !important;
}

#timerIcon.topLeftOld {
	display: none;
}

#timerHolder.topLeftOld {
	background-color: rgba(0, 0, 0, 0.2);
	border: none !important;
	margin: 0px;
}

#timerInner.topLeftOld {
	background-color: transparent;
}

#timerVal.topLeftOld {
	font-size: 45px !important;
	letter-spacing: 2px;
	text-align: left !important;
}

/* /TOP LEFT */

/* GAME INFO: MAP, SERVER, ETC */
#mapInfo {
	display: none;
}
/* /GAME INFO: MAP, SERVER, ETC */

/* CUSTOMIZE */
#menuClassContainer {
	transform: unset;
	left: 0;
	width: 100%;
	height: 100%;
	top: 0;
}
#customizeButton {
	position: absolute;
	right: 10px;
	bottom: 5px;
	border: 2px solid rgba(0, 0, 0, 0.1) !important;
	background-color: rgba(0, 0, 0, 0.2);
	text-shadow: unset !important;
	width: auto;
	background-color: rgba(0, 0, 0, 0.2);
	color: rgba(255, 255, 255, 0.7);
}
#customizeButton:hover {
	color: white !important;
}
#customizeButton span {
	display: none;
}
#menuClassNameTag {
	position: fixed;
	right: 20px;
	text-shadow: unset !important;
	font-size: 20px !important;
	bottom: 175px;
	opacity: 0.6;
}

#menuClassSubtext {
	position: fixed;
	right: 20px;
	text-shadow: unset !important;
	font-size: 20px !important;
	bottom: 135px;
	color: white;
	opacity: 0.7;
}

#classPreviewCanvas {
	position: fixed;
	right: -150px;
	bottom: 118px;
	opacity: 0.7;
}

#menuClassName {
	position: fixed;
	right: 20px;
	text-shadow: unset !important;
	font-size: 20px !important;
	bottom: 80px;
	opacity: 0.7;
}
/* /CUSTOMIZE */

/* TOP RIGHT CORNER */
#menuServerInfoContainer {
	display: flex;
	flex-direction: row;
	align-items: center;
}

#menuRegionLabel {
	margin-right: 5px;
	margin-left: 5px;
}

#menuRegionLabel {
}

#menuPingText {
	margin-left: 5px;
	margin-right: 5px;
	font-size: 15px;
}

#menuPingText::after {
	content: ' MS';
}

.leaderNameF {
	color: white;
}

.leaderName {
	color: var(--accent);
}

.leaderScore {
	color: var(--white);
	opacity: 100%;
}

#menuPingIcon {
	display: none;
}

#instructions {
	visibility: hidden;
}

#instructionHolder {
	background-color: transparent;
	backdrop-filter: blur(5px);
}

.countIcon {
	background-color: rgba(35, 35, 35, 0.3);
}

#killsVal,
#deathsVal,
#streakVal,
#myScoreVal,
#kdVal,
#killCount:after,
#deathCount:after,
#streakCount:after,
#scoreCount:after {
	font-size: 20px;
	color: white;
	width: 100px;
}

img#streakIcon {
	display: none;
}

img#kdIcon {
	display: none;
}

img#deathsIcon {
	display: none;
}

img#killsIcon {
	display: none;
}
/* ... */

